Update search section header and hint text

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ h1{font-size:1.6rem;font-weight:800;background:linear-gradient(135deg,#4f8ef7,#7
 
 <!-- SEARCH -->
 <div class="search-box">
-  <h2>&#128270; Buscar equipo</h2>
-  <p class="search-hint">Busca por <strong>Computer Name</strong> (ej: PC-LAB01) o <strong>usuario</strong> (ej: antonio.arredondo). Separa multiples con coma.</p>
+  <h2>&#128270; Resumen de tu busqueda</h2>
+  <p class="search-hint">Busca por <strong>hostname</strong> (ej: LSTKXX123456), <strong>usuario</strong> (ej: nombre.apellido) o con el SofttekTag (ej: 123456). Separa multiples con coma.</p>
   <div class="srow">
     <input type="text" id="sinput" placeholder="Computer Name o usuario..." onkeydown="if(event.key==='Enter')doSearch()">
     <button class="btn" onclick="doSearch()">Buscar</button>
