--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h1{font-size:1.6rem;font-weight:800;background:linear-gradient(135deg,#4f8ef7,#7
 <!-- SEARCH -->
 <div class="search-box">
   <h2>&#128270; Resumen de tu busqueda</h2>
-  <p class="search-hint">Busca por <strong>hostname</strong> (ej: LSTKXX123456), <strong>usuario</strong> (ej: nombre.apellido) o con el SofttekTag (ej: 123456). Separa multiples con coma.</p>
+  <p class="search-hint">Busca por <strong>hostname</strong> (ej: LSTKXX123456), <strong>usuario</strong> (ej: nombre.apellido) o con el <strong>SofttekTag</strong> (ej: 123456). Separa multiples con coma.</p>
   <div class="srow">
     <input type="text" id="sinput" placeholder="Computer Name o usuario..." onkeydown="if(event.key==='Enter')doSearch()">
     <button class="btn" onclick="doSearch()">Buscar</button>
