Update card title from 'Admin Permisos' to 'Permisos de administrador'

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ h1{font-size:1.6rem;font-weight:800;background:linear-gradient(135deg,#4f8ef7,#7
   <div class="card x" id="card-x"
        ondragover="dragOver(event,'x')" ondragleave="dragLeave('x')" ondrop="onDrop(event,'x')">
     <div class="card-icon">&#128737;</div>
-    <div class="card-title">Admin Permisos</div>
+    <div class="card-title">Permisos de administrador</div>
     <label class="up-btn" for="inp-x">&#128194; Seleccionar archivo</label>
     <input type="file" id="inp-x" accept=".xlsx,.xls,.csv"
            style="position:absolute;left:-9999px;opacity:0;width:1px;height:1px"
